--- a/v2/index.html
+++ b/v2/index.html
@@ -20,7 +20,8 @@
     <main>
     </main>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> -->
+    <script src="./assets/js/jquery-3.4.1.min.js"></script>
     <script src="./assets/js/minesweeper.js"></script>
 </body>
 </html>
